# kodiak-web-client

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  trunk-post-build.sh
.github/workflows/: ev_create-tag-test.yml  ev_pr-to-dev-closed.yml  ev_pr-to-dev-merged.yml  ev_pr-to-dev.yml  ev_pr-to-main-merged.yml  ev_pr-to-main.yml  ev_push-tag-test.yml  ev_push-to-feat.yml  ev_push-to-patch.yml  ev_push-to-rel.yml  ev_schedule-daily.yml  wf_build-test.yml  wf_full.yml  wf_tag.yml
assets/favicon/: README.md  browserconfig.xml  html_code.html  site.webmanifest
assets/footer/: footer.html
assets/sass/: index.scss
src/: app.rs  lib.rs  main.rs
tests/: lib.rs
