[package]
name = "kodiak-web-client"
version = "0.1.0"
authors = ["Tobias Mucke <tobias.mucke@gmail.com>"]
description = "Kodiak's web client."
documentation = "https://polarlabs.io/docs"
readme = "README.md"
homepage = "https://www.polarlabs.io/"
repository = "https://github.com/polarlabs/kodiak-web-client/"
license = "AGPL-3.0-only"
edition = "2021"

# Despite being Open Source and published on GitHub,
# it is not intented to publish it via a registry like crates.io.
publish = false

# Disable autodiscovery for tests, use test target (see below).
autotests = false

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "kodiak-web-client"

[dependencies]
gloo = "0.10.0"
yew = { version="0.21.0", features=["csr"] }

[dev-dependencies]

# Dedicated target for tests to avoid having one crate per test file,
# allows code sharing across multiple test files.
# How to run tests:
# - all tests: `cargo test`
# - unit tests (lib) only: `cargo test --lib`
# - unit tests (bins) only: `cargo test --bin '*'`
# - integration tests only: `cargo test --test integration`
# - doc tests only: `cargo test --doc`
[[test]]
name = "integration"
path = "tests/lib.rs"
